# IDEA-2.O

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  detailed_plan.md  star-system-analysis-96935a.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt  ws_test.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  inference_ws.py  websocket_route.py
backend/app/api/routes/: __init__.py  alerts.py  copilot.py  graph.py  inference.py  score.py  system.py
backend/app/core/: __init__.py  config.py
backend/app/inference_data/: __init__.py  checkpoint_gat_medium_hi.tar  demo_subset_small_hi.csv  demo_subset_small_li.csv  node_norm_stats_medium_hi.pt
backend/app/models/: __init__.py  internal.py  requests.py  responses.py
backend/app/services/: __init__.py  copilot_service.py  feature_engineering.py  graph_builder.py  isolation_forest_service.py  neo4j_service.py  risk_fusion.py  rule_engine.py  tgnn_service.py
backend/app/websocket/: __init__.py  connection_manager.py  stream_manager.py
backend/isolation_models/: idea2_0.ipynb  isolation_forest.pkl  kaggle (1).json  model_metadata.pkl  scaler.pkl
backend/portable_tgnn_inference/: README.md  demo_input_generator.py  inference_engine.py  models.py  sample_output.json  verify_model.py
inference/: .gitignore  Multi_GNN_Integration_Handoff.md  README.md  app.yaml  demo_subset_medium_hi_2.csv  deploy_inference.sh  extract_demo_remote.sh  extract_remote_batch.py  (+10 more)
inference/backend/: Dockerfile  add_circular_txs.py  analyze_custom_data.py  custom_test_dataset.csv  demo_scenario.py  demo_server.py  demo_subset_medium_hi.csv  demo_subset_medium_hi_2.csv  edge_norm_stats_medium_hi.pt  enriched_entities.csv  entities.csv  generate_custom_data.py  inference_test_data.csv  model_baseline_stats_small_li.json  model_mappings_small_li.json  pyproject.toml  requirements-deploy.txt  test_neo4j_aura.py  transactions.csv  user_profiles.csv
(+91 files in other folders)
