[project]
name = "backend"
version = "1.0.0"
description = "STAR — Suspicious Transaction Analysis & Response — AML Intelligence Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ── Web Framework ─────────────────────────────────────
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "websockets>=12.0",

    # ── Config & Env ──────────────────────────────────────
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",

    # ── Machine Learning (Isolation Forest) ───────────────
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.1",

    # ── Deep Learning (TGNN/GATe) ─────────────────────────
    # NOTE: torch and torch-geometric have special install steps.
    # See README for CPU/GPU install commands.
    # "torch>=2.2",
    # "torch-geometric>=2.5",

    # ── LangChain + Gemini ────────────────────────────────
    "langchain>=0.2",
    "langchain-google-genai>=1.0",
    "langchain-core>=0.2",
    "google-generativeai>=0.7",

    # ── Graph Database ────────────────────────────────────
    "neo4j>=5.0",
    "networkx>=3.2",

    # ── HTTP Client ───────────────────────────────────────
    "httpx>=0.27",

    # ── Utilities ─────────────────────────────────────────
    "python-jose[cryptography]>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
