[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-multipart>=0.0.22",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "uvicorn[standard]>=0.23.0",
    "fastapi>=0.100.0",
    "numpy>=1.24.0",
    "neo4j>=5.0.0",
    "websockets>=12.0"
]
